# task_manager

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  forms.py  models.py  services.py
app/blueprints/errors/: errors.py
app/blueprints/main/: main.py
app/templates/: 404.html  index.html
migrations/versions/: c68b7d387d40_.py
tests/: conftest.py  test_forms.py  test_services.py
tests/blueprints/: test_errors.py  test_main.py
